change some tables

--- a/evaluacion.tex
+++ b/evaluacion.tex
@@ -105,12 +105,12 @@ La efectividad de nuestros algoritmos se basa en qué tan cerca están de encont
 Realizamos experimentos utilizando las estructuras de datos especificadas en nuestra primera sección de este capítulo. Evaluamos tres algoritmos: Hill Climbing (\emph{HC}), Subset (\emph{SubSet}). Para cada algoritmo, utilizamos dos funciones de valoración: una basada en el generador exhaustivo (\emph{BE}) y otra basada en la cobertura de ramas (\emph{RC}).
 Es importante destacar que la función de valoración que utiliza la test suite generada por Randoop, la cual hemos modificado para medir la cobertura de ramas, produce resultados variables según la semilla utilizada. La semilla tiene importancia en la aleatoriedad que posee Randoop, lo que puede afectar los resultados de la función de valoración.
 
-Para la estructura \emph{NCL}, el algoritmo \emph{HC} con la función de valoración que cuenta objectos de nuestro generador exhaustivo, \emph{BE} encuentra un subconjunto de métodos \emph{builders} que coincide con el conjunto mínimo, es decir, no agrega métodos adicionales. Sin embargo, al utilizar la función de valoración \emph{RC}, el algoritmo \emph{HC} encuentra un subconjunto con 0.6 métodos adicionales en promedio. Esto indica que en 3 de las 5 ejecuciones se agrega un método extra.
+Para la estructura \emph{NCL}, el algoritmo \emph{HC} con la función de valoración que cuenta objectos de nuestro generador exhaustivo, \emph{BE} encuentra un subconjunto de métodos \emph{builders} que coincide con el conjunto mínimo, es decir, no agrega métodos adicionales. Sin embargo, al utilizar la función de valoración \emph{RC}, el algoritmo \emph{HC} encuentra un subconjunto con 3.40 numeros de métodos en promedio. Esto indica que en 2 de las 5 ejecuciones se agrega un método extra.
 En cuanto al algoritmo \emph{SubSet}, se comporta de manera similar al algoritmo \emph{HC} para ambas funciones de valoración.
-El algoritmo evolutivo, en las 5 ejecuciones, tiene encuentra un método de más con la función de valoración que utiliza cobertura, mientras que la función de valoración con el generador exhaustivo en 4 de las 5 ejecuciones encuentra un método de más. Esto se debe a que el algoritmo genético es muy sensible a los parámetros que se utiliza y puede depender de cada caso. Si se le da el tiempo, los parámetros y las evoluciones necesarias, este algoritmo siempre encontraría el mínimo sin ningún método extra. Así mismo con la función de valoración, tiene un método de más en todas las ejecuciones.
+El algoritmo evolutivo, en las 5 ejecuciones, encuentra un método de más con la función de valoración que utiliza cobertura, mientras que la función de valoración con el generador exhaustivo en 4 de las 5 ejecuciones encuentra un método de más. Esto se debe a que el algoritmo genético es muy sensible a los parámetros que se utiliza y puede depender de cada caso. Si se le da el tiempo, los parámetros y las evoluciones necesarias, este algoritmo siempre encontraría el mínimo sin ningún método extra. Así mismo con la función de valoración, tiene un método de más en todas las ejecuciones.
 
 
-En el caso de las estructuras \emph{UnionFind, FibonacciHeap, BTree, BinomialHeap y Scheduler}, todos los algoritmos logran encontrar el conjunto mínimo de métodos \emph{builders}, ya que no se encuentran métodos adicionales en ninguno de los casos. Esto tambien tiene que ver con que tienen menos cantidad de metodos en sus API y la complejidad de los mismos es diferente al resto de las clases que forman parte de nuestro benchmarks.
+En el caso de las estructuras \emph{UnionFind, FibonacciHeap, BTree, BinomialHeap y Scheduler}, todos los algoritmos logran encontrar el conjunto mínimo de métodos \emph{builders}, ya que no se encuentran métodos adicionales en ninguno de los casos. Esto también tiene que ver con que tienen menos cantidad de métodos en sus API y la complejidad de los mismos es diferente al resto de las clases que forman parte de nuestro benchmarks.
 
 En la estructura \emph{Lits}, la función de valoración basada en el generador exhaustivo siempre encuentra al menos un método adicional. Esto se debe a que el generador exhaustivo depende de los valores con los que están inicializados los arreglos en la API de List, lo que puede generar un método adicional en el conjunto mínimo de métodos \emph{builders}. 
 En la API de \emph{List}, la cual, es una biblioteca Java para resolver problemas booleanos de satisfacibilidad (SAT). Esta contiene una colección de arreglos que almacena los literales utilizados en un problema SAT. Proporciona métodos para manipular y acceder a literales, como agregar literales a la estructura, recuperar literales por sus índices, negar literales, etc. Nuestro generador exhaustivo depende de con que valores estén inicializados estos arreglos, y el scope que le hemos pasado. Es por esto que agrega un método para crear arreglos que no tiene posibilidad de hacerlo con los métodos builders y el scope que se le dio. Esto no quiere decir que sea builders el método que se agrega, solo que con el scope dado, no tiene posibilidad de crearlo con métodos alternativos. Si aumentamos el scope y modificamos la clase, nos encuentra siempre el subconjunto mínimo.
