--- a/tables/eficaciaBuilders.tex
+++ b/tables/eficaciaBuilders.tex
@@ -1,4 +1,4 @@
-\begin{table}[t]
+\begin{table}[H]
 \centering
 \label{tab:t1}
 \scriptsize
@@ -9,39 +9,55 @@
 \multicolumn{2}{|c|}{} & \multicolumn{2}{c}{\textbf{GA}} & \multicolumn{2}{c}{\textbf{HC}} & \multicolumn{2}{c|}{\textbf{SubSet}} \\
 \multicolumn{2}{|c|}{} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{NCL}} & 0.80  &  1 & 0 &  0.60 &0 &  0.60 \\
-\midrule
-\multicolumn{2}{|c|}{\textbf{UFInd}}& 0.40 & 0  & 0  & 0  &0   & 0     \\
-\midrule
-
-\multicolumn{2}{|c|}{\textbf{FHeap}}& 0 & 0  &  0 &  0 &  0 &  0   \\
-\midrule
-
-\multicolumn{2}{|c|}{\textbf{BTree}} & 0 & 0  &  0 &  0 &  0 &  0  \\
-\midrule
-
-\multicolumn{2}{|c|}{\textbf{BHeap}}& 0 & 0  &  0 &  0 &  0 &  0   \\
-\midrule
-
-\multicolumn{2}{|c|}{\textbf{Lits}} &  1 &  & 1 &  0  & 1  &   \\
-\midrule
-
-\multicolumn{2}{|c|}{\textbf{Sched.}} &  0 & 0   & 0  &  0 &  0 & 0 \\
+\multicolumn{2}{|c|}{\textbf{NCL}} & 3.80  &  4 & 3 &  3.40 &3 &  3.40 \\
+\multicolumn{2}{|c|}{\tiny \#API: 34} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
 
 \midrule
-\multicolumn{2}{|c|}{\textbf{LinkedList}} & 0 &  1.20 &  0 &  1 &0  &  1.20  \\
+\multicolumn{2}{|c|}{\textbf{UFInd}}& 3 & 3  & 3  & 3  &3   & 3     \\
+\multicolumn{2}{|c|}{\tiny \#API: 9} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
 \midrule
 
-\multicolumn{2}{|c|}{\textbf{TreeMap}} &  0 & \cellcolor{gray!25}\emph{2.40}  &  0 &  \cellcolor{gray!25} \emph{1}  &0 & \cellcolor{gray!25}\emph{2}   \\
+\multicolumn{2}{|c|}{\textbf{FHeap}}& 3 & 3  &  3 &  3 &  3 &  0   \\
+\multicolumn{2}{|c|}{\tiny \#API: 7} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
 \midrule
-
-\multicolumn{2}{|c|}{\textbf{TreeSet}} &  0&\cellcolor{gray!25} \emph{1.80}  &  0 &   \cellcolor{gray!25}\emph{1    }  & 0 & \cellcolor{gray!25}\emph{1}   \\
+\multicolumn{2}{|c|}{\textbf{BTree}} & 2 & 2  &  2 &  2 &  2 &  2  \\
+\multicolumn{2}{|c|}{\tiny \#API: 8} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 2} &  &   & &   & & \\
 \midrule
-
-\multicolumn{2}{|c|}{\textbf{HashSet}} &  1 &1  &  1 &  1& 1  &  1  \\
+\multicolumn{2}{|c|}{\textbf{BHeap}}& 3 & 3 &  3 &  3 &  3 &  3   \\
+\multicolumn{2}{|c|}{\tiny \#API: 10} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
 \midrule
+\multicolumn{2}{|c|}{\textbf{Lits}} &  6 & 5 & 6 &  5  & 6  &5   \\
+\multicolumn{2}{|c|}{\tiny \#API: 26} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 6} &  &   & &   & & \\
+\midrule
+\multicolumn{2}{|c|}{\textbf{Sched.}} &  3 & 3   & 3  &  3&  3 & 3 \\
 
-\multicolumn{2}{|c|}{\textbf{HashMap}} & 0.40  &   &0   &   &  0 &    \\
+\multicolumn{2}{|c|}{\tiny \#API: 10} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
+\midrule\multicolumn{2}{|c|}{\textbf{LinkedList}} & 2 &  2.80 &  2 &  3 &2  &  2.80  \\
+\multicolumn{2}{|c|}{\tiny \#API: 67} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 2} &  &   & &   & & \\
+\midrule
+\multicolumn{2}{|c|}{\textbf{TreeMap}} &  3 & \cellcolor{gray!25}\emph{5.60}  &  3 &  \cellcolor{gray!25} \emph{4}  &3 & \cellcolor{gray!25}\emph{5}   \\
+\multicolumn{2}{|c|}{\tiny \#API: 61} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
+\midrule
+\multicolumn{2}{|c|}{\textbf{TreeSet}} &  0&\cellcolor{gray!25} \emph{3.20}  &  3 &   \cellcolor{gray!25}\emph{4}  & 3 & \cellcolor{gray!25}\emph{4}   \\
+\multicolumn{2}{|c|}{\tiny \#API: 34} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
+\midrule
+\multicolumn{2}{|c|}{\textbf{HashSet}} &  2 &3  &  2 &  3& 2  &  3 \\
+\multicolumn{2}{|c|}{\tiny \#API: 31} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 2} &  &   & &   & & \\
+\midrule
+\multicolumn{2}{|c|}{\textbf{HashMap}} & 2.60  & 2  &2   &2   &  2 & 2   \\
+\multicolumn{2}{|c|}{\tiny \#API: 45} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 2} &  &   & &   & & \\
 \hline
 \end{tabular}
 
