--- a/tables/eficienciaBuilders.tex
+++ b/tables/eficienciaBuilders.tex
@@ -1,4 +1,4 @@
-\begin{table}[t]
+\begin{table}[H]
 \centering
 \label{tab:t1}
 \scriptsize
@@ -10,39 +10,52 @@
 \multicolumn{2}{|c|}{} & \textbf{\tiny{GE}} & \textbf{\tiny{RC}} & \textbf{\tiny{GE}} & \textbf{\tiny{RC}} & \textbf{\tiny{GE}} & \textbf{\tiny{RC}} \\
 \midrule
 \multicolumn{2}{|c|}{\textbf{NCL}} & 374  & 4389   & 67 &  1251 &85 & 10370 \\
- \multicolumn{2}{|c|}{\scriptsize \#API: 34}&   &   &   &   &   &      \\
+\multicolumn{2}{|c|}{\tiny \#API: 34} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
 \midrule
 \multicolumn{2}{|c|}{\textbf{UFInd}}& 94  & 934  &  27 &381   & 32  &  301    \\
+\multicolumn{2}{|c|}{\tiny \#API: 9} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
 \midrule
-
 \multicolumn{2}{|c|}{\textbf{FHeap}} & 11  & 462  & 6  &321   &  6 &  482   \\
+\multicolumn{2}{|c|}{\tiny \#API: 7} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
 \midrule
-
 \multicolumn{2}{|c|}{\textbf{BTree}} &  5 &  232 & 2  & 240   &  2 & 240   \\
+\multicolumn{2}{|c|}{\tiny \#API: 7} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 2} &  &   & &   & & \\
 \midrule
-
 \multicolumn{2}{|c|}{\textbf{BHeap}} & 31 &  1319 & 10 & 390  & 10 &  776   \\
+\multicolumn{2}{|c|}{\tiny \#API: 10} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
 \midrule
-
 \multicolumn{2}{|c|}{\textbf{Lits}} & 32  & 4572  & 11  &  563 & 16  & 5642   \\
+\multicolumn{2}{|c|}{\tiny \#API: 26} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 6} &  &   & &   & & \\
 \midrule
-
 \multicolumn{2}{|c|}{\textbf{Sched.}} &   94& 2247  & 24  & 374  & 86  &1083    \\
-
+\multicolumn{2}{|c|}{\tiny \#API: 10} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
 \midrule
 \multicolumn{2}{|c|}{\textbf{LinkedList}} & 89 &  2182 &  13 &  432 & 15 &  12698  \\
+\multicolumn{2}{|c|}{\tiny \#API: 67} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 2} &  &   & &   & & \\
 \midrule
-
 \multicolumn{2}{|c|}{\textbf{TreeMap}} & 1248  &  5162 &  113 & 691  &   &   6127  \\
+\multicolumn{2}{|c|}{\tiny \#API: 61} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
 \midrule
-
 \multicolumn{2}{|c|}{\textbf{TreeSet}} &  96 & 3021  &  11 & 801  &  13 &  5421  \\
+\multicolumn{2}{|c|}{\tiny \#API: 34} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
 \midrule
-
 \multicolumn{2}{|c|}{\textbf{HashSet}} &  148 &  570 & 20  &  3842 &  39 &   660 \\
+\multicolumn{2}{|c|}{\tiny \#API: 31} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 2} &  &   & &   & & \\
 \midrule
-
 \multicolumn{2}{|c|}{\textbf{HashMap}} &  1803 &   &  85 &   &   9340&    \\
+\multicolumn{2}{|c|}{\tiny \#API: 45} &  &   & &   & & \\
+\multicolumn{2}{|c|}{\tiny \#Builders: 2} &  &   & &   & & \\
 \hline
 \end{tabular}
 
