Some changes in tables

--- a/tables/eficaciaBuilders.tex
+++ b/tables/eficaciaBuilders.tex
@@ -9,7 +9,7 @@
 \multicolumn{2}{|c|}{} & \multicolumn{2}{c}{\textbf{GA}} & \multicolumn{2}{c}{\textbf{HC}} & \multicolumn{2}{c|}{\textbf{SubSet}} \\
 \multicolumn{2}{|c|}{} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} & \textbf{\tiny{BE}} & \textbf{\tiny{RC}} \\
 \midrule
-\multicolumn{2}{|c|}{\textbf{NCL}} & 3.80  &  4 & 3 &  3.40 &3 &  3.40 \\
+\multicolumn{2}{|c|}{\textbf{NCL}} & 3  &   \cellcolor{gray!25} \emph{3.8} & 3 &  3 &3 &  3 \\
 \multicolumn{2}{|c|}{\tiny \#API: 34} &  &   & &   & & \\
 \multicolumn{2}{|c|}{\tiny \#Builders: 3} &  &   & &   & & \\
 
