--- a/tables/randoopvsBeapi.tex
+++ b/tables/randoopvsBeapi.tex
@@ -7,31 +7,48 @@
   \textbf{GTime} & \textbf{Tool} & \textbf{Valid}  & \textbf{Invalid} & \textbf{Test}&\textbf{T(Seg)} &\textbf{Ramas}  & \textbf{Mutacion} \\ 
   \midrule
 5	&	Randoop	&	-	&	- & 380 & 4	& 53 & 67 \\
-& R-Serialize	& 3851 & 264 & 184852 & 4	& 78 &	89 	\\
-& R-builders	& 12812 & 9008 & 614980 & 20 &	78	& 89  \\
-&	BEAPI & 32 & - & 1540 & 2	& 78 & 89 \\
+& R-Serialize	& 3851 & 264 & 184852 & 4	& 82 &	89 	\\
+& R-builders	& 12812 & 9008 & 614980 & 20 &	82	& 89  \\
+&	BEAPI & 32 & - & 1540 & 2	& 82 & 89 \\
 \cline{2-8}
-5	&	Randoop	&	-	&	- & 380 & 4	& 53 & 67 \\
-& R-Serialize	& 3851 & 264 & 184852 & 4	& 78 &	89 	\\
-& R-builders	& 12812 & 9008 & 614980 & 20 &	78	& 89  \\
-&	BEAPI & 32 & - & 1540 & 2	& 78 & 89 \\
-&BEAPI	&	32	&	- &1540&2&	78	&	89 \\
+5	&	Randoop	&	-	&	- & 380 & 4	& 67 & 67 \\
+& R-Serialize	& 7655 & 532 & 367444 & 6	& 82 &	89 	\\
+& R-builders	& 23320 & 16482 & 1119364 & 35 &	82	& 89  \\
+&	BEAPI & 32 & - & 1540 & 2	& 82 & 89 \\
 \cline{2-8}
-5	&	Randoop	&	-	&	- & 380 & 4	& 53 & 67 \\
-& R-Serialize	& 3851 & 264 & 184852 & 4	& 78 &	89 	\\
-& R-builders	& 12812 & 9008 & 614980 & 20 &	78	& 89  \\
-&	BEAPI & 32 & - & 1540 & 2	& 78 & 89 \\
+5	&	Randoop	&	-	&	- & 380 & 4	& 73 & 85 \\
+& R-Serialize	& 14980 & 1015 & 719044 & 8	& 82 &	89 	\\
+& R-builders	& 38047 & 26904 & 1826260 & 55 &	82	& 89  \\
+&	BEAPI & 32 & - & 1540 & 2	& 82 & 89 \\
 
 \cline{2-8}
 5	&	Randoop	&	-	&	- & 380 & 4	& 53 & 67 \\
-& R-Serialize	& 3851 & 264 & 184852 & 4	& 78 &	89 	\\
-& R-builders	& 12812 & 9008 & 614980 & 20 &	78	& 89  \\
-&	BEAPI & 32 & - & 1540 & 2	& 78 & 89 \\
+& R-Serialize	& 28965 & 2020 & 1390324 & 12		& 76 &	85 	\\
+& R-builders	& 59016 & 41681 & 2832772 & 85 	& 82 &	89 	  \\
+&	BEAPI & 32 & - & 1540 & 2	& 82 &	89 \\
 \cline{2-8}
-5	&	Randoop	&	-	&	- & 380 & 4	& 53 & 67 \\
-& R-Serialize	& 3851 & 264 & 184852 & 4	& 78 &	89 	\\
-& R-builders	& 12812 & 9008 & 614980 & 20 &	78	& 89  \\
-&	BEAPI & 32 & - & 1540 & 2	& 78 & 89 \\
+5	&	Randoop	&	-	&	- & 12452 & 29	& 81 & 89\\
+& R-Serialize	& 97236 & 7088 & 4667332 & 35	& 82 &	89 	\\
+& R-builders	& 125992 & 89292 & 6047620 & 179 & 82 &	89  \\
+&	BEAPI & - & - & - & -	& 82 &	89 \\
 \end{tabular}
 \end{table}
 
+
+\begin{table}[H]
+\scriptsize
+\centering
+\label{tab:results-obj1}
+\begin{tabular}{ c  r  |r | r | r|r|r|r  }
+  \toprule
+  \textbf{GTime} & \textbf{Tool} & \textbf{Valid}  & \textbf{Invalid} & \textbf{Test}&\textbf{T(Seg)} &\textbf{Ramas}  & \textbf{Mutacion} \\ 
+  \midrule
+
+5	&	Randoop	&	-	&	- & - & -	& - & - \\
+& R-Serialize	& 3290 & 348 & 649448 & 95	& 118 &	9	\\			
+& R-builders	& 4222 & - & 856088 & - &	-	& -  \\				
+&	BEAPI & - & - & - & -	& - & - \\		
+
+
+\end{tabular}
+\end{table}
