Add tables about BEAPI

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 %\documentclass[10pt]{report} %twoside para impresion final 
 \documentclass[12pt,a4paper,openany]{report} %a4paper,
-\usepackage[spanish]{babel}
+\usepackage[spanish,es-tabla]{babel}
 
 \makeatletter
 
@@ -48,7 +48,6 @@
   {\titlerule*[0.75em]{.}\contentspage} % Agrega líneas de puntos para las subsecciones
 
 %Formato para chapter
-
 % \titleformat{\chapter}[display]
 %   {\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter}{}{}
   \titleformat{\chapter}[display]{\normalfont\Huge\bfseries}{\chaptertitlename\ \thechapter.}{0.42em}{}
