--- a/tables/optimizaciones.tex
+++ b/tables/optimizaciones.tex
@@ -1,85 +1,85 @@
-\begin{table}[H]
-\scriptsize
-\centering
-\label{tab:results-obj1}
-\begin{tabular}{ l r | r | r | r | r  }
-  \toprule
-  \multicolumn{6}{c}{\textbf{FAJITA}} \\
-  \midrule 
-  \textbf{Class} & \textbf{Scope} & \textbf{SM/BLD} & \textbf{SM}  & \textbf{BLD} & \textbf{NoOPT}  \\
-  \midrule
-  BinTree
-&	3	&	0.06	&	0.05	&	0.63	&	0.886	\\
-& 4	&	0.1	&	0.11	&	150.99	&	141.21	\\
-&	5	&	0.26	&	0.31	&	-	&	-	\\
-&	6	&	0.52	&	0.52	&	-	&	-	\\
-&	7	&	01.01	&	1.15	&	-	&	-	\\
-&	8	&	2.59	&	3.55	&	-	&	-	\\
-&	9	&	12.38	&	12.96	&	-	&	-	\\
-&	10	&	51.34	&	59.45	&	-	&	-	\\
-&	11	&	265.57	&	204.13	&	-	&	-	\\
-&	12	&	1578.72	&	1560.70	&	-	&	-	\\
-  \midrule
-  AVL
-&	3	&	0.02	&	0.07	&	0.24	&	- \\
-&	4	&	0.04	&	0.16	&	81.24	&	- \\
-&	5	&	0.09	&	0.31	&	-	&	-	\\
-&	6	&	0.14	&	0.76	&	-	&	-	\\
-&	7	&	0.27	&	2.43	&	-	&	-	\\
-&	8	&	0.46	&	7.71	&	-	&	-	\\
-&	9	&	0.86	&	27.89	&	-	&	-	\\
-&	10	&	1.92	&	104.60	&	-	&	-	\\
-&	11	&	5.80	&	391.28	&	-	&	-	\\
-&	12	&	14.58	&	1389.78	&	-	&	-	\\
-&	13	&	45.45	&	-	&	-	&	-	\\
-&	14	&	-	&	-	&	-	&	-	\\
-  \midrule
-  RBT
-&	3	&	0.02	&	0.05	&	25.21	&	-	\\
-&	4	&	0.05	&	0.10	&	-	&	-	\\
-&	5	&	0.09	&	0.13	&	-	&	-	\\
-&	6	&	0.16	&	0.25	&	-	&	-	\\
-&	7	&	0.31	&	0.50	&	-	&	-	\\
-&	8	&	0.72	&	1.30	&	-	&	-	\\
-&	9	&	2.11	&	3.67	&	-	&	-	\\
-&	10	&	6.18	&	11.70	&	-	&	-	\\
-&	11	&	19.72	&	37.63	&	-	&	-	\\
-&	12	&	63.16	&	122.18	&	-	&	-	\\
-&	13	&	206.66	&	394.47	&	-	&	-	\\
-  \midrule
-  BinHeap
-&	3	&	0.03	&	0.04	&	1.35	&	-	\\
-&	4	&	0.08	&	0.18	&	-	&	-	\\
-&	5	&	0.31	&	1.21	&	-	&	-	\\
-&	6	&	1.28	&	18.41	&	-	&	-	\\
-&	7	&	44452	&	391.53	&	-	&	-	\\
-&	8	&	97.08	&	-	&	-	&	-	\\
-  \midrule
-  SLList
-&	3	&	0.02	&	0.04	&	0.44	&	- \\
-&	4	&	0.11	&	0.10	&	71.89	&	-	\\
-&	5	&	0.33	&	0.38	&	-	&	-	\\
-&	6	&	1.58	&	2.31	&	-	&	-	\\
-&	7	&	15.38	&	291.53	&	-	&	-	\\
-&	8	&	297.41	&	705.71	&	-	&	-	\\
-  \midrule
-  DLList
-&	3	&	0.01	&	0.19	&	0.63	&	-	\\
-&	4	&	0.05	&	0.55	&	155.70	&	-	\\
-&	5	&	0.17	&	2.50	&	-	&	-	\\
-&	6	&	0.83	&	27.58	&	-	&	-	\\
-&	7	&	12.14	&	-	&	-	&	-	\\
-&	8	&	269.47	&	-	&	-	&	-	\\
-  \midrule
-  NCL
-&	3	&	0.06	&	0.07	&	08.07	&	-	\\
-&	4	&	0.26	&	0.19	&	-	&	-	\\
-&	5	&	0.84	&	0.65	&	-	&	-	\\
-&	6	&	4.80	&	5.95	&	-	&	-	\\
-&	7	&	58.75	&	99.29	&	-	&	-	\\
-  \bottomrule
-\end{tabular}
-\end{table}
+% \begin{table}[H]
+% \scriptsize
+% \centering
+% \label{tab:results-obj1}
+% \begin{tabular}{ l r | r | r | r | r  }
+%   \toprule
+%   \multicolumn{6}{c}{\textbf{FAJITA}} \\
+%   \midrule 
+%   \textbf{Class} & \textbf{Scope} & \textbf{SM/BLD} & \textbf{SM}  & \textbf{BLD} & \textbf{NoOPT}  \\
+%   \midrule
+%   BinTree
+% &	3	&	0.06	&	0.05	&	0.63	&	0.886	\\
+% & 4	&	0.1	&	0.11	&	150.99	&	141.21	\\
+% &	5	&	0.26	&	0.31	&	-	&	-	\\
+% &	6	&	0.52	&	0.52	&	-	&	-	\\
+% &	7	&	01.01	&	1.15	&	-	&	-	\\
+% &	8	&	2.59	&	3.55	&	-	&	-	\\
+% &	9	&	12.38	&	12.96	&	-	&	-	\\
+% &	10	&	51.34	&	59.45	&	-	&	-	\\
+% &	11	&	265.57	&	204.13	&	-	&	-	\\
+% &	12	&	1578.72	&	1560.70	&	-	&	-	\\
+%   \midrule
+%   AVL
+% &	3	&	0.02	&	0.07	&	0.24	&	- \\
+% &	4	&	0.04	&	0.16	&	81.24	&	- \\
+% &	5	&	0.09	&	0.31	&	-	&	-	\\
+% &	6	&	0.14	&	0.76	&	-	&	-	\\
+% &	7	&	0.27	&	2.43	&	-	&	-	\\
+% &	8	&	0.46	&	7.71	&	-	&	-	\\
+% &	9	&	0.86	&	27.89	&	-	&	-	\\
+% &	10	&	1.92	&	104.60	&	-	&	-	\\
+% &	11	&	5.80	&	391.28	&	-	&	-	\\
+% &	12	&	14.58	&	1389.78	&	-	&	-	\\
+% &	13	&	45.45	&	-	&	-	&	-	\\
+% &	14	&	-	&	-	&	-	&	-	\\
+%   \midrule
+%   RBT
+% &	3	&	0.02	&	0.05	&	25.21	&	-	\\
+% &	4	&	0.05	&	0.10	&	-	&	-	\\
+% &	5	&	0.09	&	0.13	&	-	&	-	\\
+% &	6	&	0.16	&	0.25	&	-	&	-	\\
+% &	7	&	0.31	&	0.50	&	-	&	-	\\
+% &	8	&	0.72	&	1.30	&	-	&	-	\\
+% &	9	&	2.11	&	3.67	&	-	&	-	\\
+% &	10	&	6.18	&	11.70	&	-	&	-	\\
+% &	11	&	19.72	&	37.63	&	-	&	-	\\
+% &	12	&	63.16	&	122.18	&	-	&	-	\\
+% &	13	&	206.66	&	394.47	&	-	&	-	\\
+%   \midrule
+%   BinHeap
+% &	3	&	0.03	&	0.04	&	1.35	&	-	\\
+% &	4	&	0.08	&	0.18	&	-	&	-	\\
+% &	5	&	0.31	&	1.21	&	-	&	-	\\
+% &	6	&	1.28	&	18.41	&	-	&	-	\\
+% &	7	&	44452	&	391.53	&	-	&	-	\\
+% &	8	&	97.08	&	-	&	-	&	-	\\
+%   \midrule
+%   SLList
+% &	3	&	0.02	&	0.04	&	0.44	&	- \\
+% &	4	&	0.11	&	0.10	&	71.89	&	-	\\
+% &	5	&	0.33	&	0.38	&	-	&	-	\\
+% &	6	&	1.58	&	2.31	&	-	&	-	\\
+% &	7	&	15.38	&	291.53	&	-	&	-	\\
+% &	8	&	297.41	&	705.71	&	-	&	-	\\
+%   \midrule
+%   DLList
+% &	3	&	0.01	&	0.19	&	0.63	&	-	\\
+% &	4	&	0.05	&	0.55	&	155.70	&	-	\\
+% &	5	&	0.17	&	2.50	&	-	&	-	\\
+% &	6	&	0.83	&	27.58	&	-	&	-	\\
+% &	7	&	12.14	&	-	&	-	&	-	\\
+% &	8	&	269.47	&	-	&	-	&	-	\\
+%   \midrule
+%   NCL
+% &	3	&	0.06	&	0.07	&	08.07	&	-	\\
+% &	4	&	0.26	&	0.19	&	-	&	-	\\
+% &	5	&	0.84	&	0.65	&	-	&	-	\\
+% &	6	&	4.80	&	5.95	&	-	&	-	\\
+% &	7	&	58.75	&	99.29	&	-	&	-	\\
+%   \bottomrule
+% \end{tabular}
+% \end{table}
 
 \begin{table}[H]
 \scriptsize
@@ -145,251 +145,251 @@
 
 
 \end{table}
-\begin{table}
-\scriptsize
-\centering
-\label{tab:results-obj1}
-\begin{tabular}{ l r | r | r | r | r  }
-  \toprule
-  \multicolumn{6}{c}{\textbf{ROOPS}} \\
-  \midrule 
-  \textbf{Class} & \textbf{Scope} & \textbf{SM/BLD} & \textbf{SM}  & \textbf{BLD} & \textbf{NoOPT}  \\
-  \midrule
-  AVL
-&	3	&	0.02	&	0.04	&	.34	&	-	\\
-&	4	&	0.03	&	0.07	&	102.16	&	-	\\
-&	5	&	0.05	&	0.11	&	-	&	-	\\
-&	6	&	.009	&	0.23	&	-	&	-	\\
-&	7	&	0.17	&	0.47	&	-	&	-	\\
-&	8	&	0.32	&	0.64	&	-	&	-	\\
-&	9	&	0.65	&	2.43	&	-	&	-	\\
-&	10	&	1.52	&	07.04	&	-	&	-	\\
-&	11	&	5.11	&	24.58	&	-	&	-	\\
-&	12	&	19.92	&	55.86	&	-	&	-	\\
-&	13	&	46.71	&	657.17	&	-	&	-	\\
-  \midrule
-  NCL
-&	3	&	0.04	&	1.31	&	1.37	&	7.96	\\
-&	4	&	0.10	&	9.59	&	52.17	&	-	\\
-&	5	&	0.34	&	40.54	&	-	&	-	\\
-&	6	&	2.27	&	128.51	&	-	&	-	\\
-&	7	&	33.89	&	659.40	&	-	&	-	\\
-&	8	&	769.63	&	-	&	-	&	-	\\
-  \midrule
-  BinTree
-&	3	&	0.02	&	0.04	&	0.23	&	105.46	\\
-&	4	&	0.05	&	0.08	&	85.32	&	-	\\
-&	5	&	0.11	&	0.16	&	-	&	-	\\
-&	6	&	0.20	&	0.50	&	-	&	-	\\
-&	7	&	0.52	&	1.00	&	-	&	-	\\
-&	8	&	1.70	&	3.77	&	-	&	-	\\
-&	9	&	7.11	&	16.30	&	-	&	-	\\
-&	10	&	34.72	&	82.07	&	-	&	-	\\
-&	11	&	181.11	&	431.63	&	-	&	-	\\
-&	12	&	966.41	&	2281.42	&	-	&	-	\\
-  \midrule
-  LList
-&	3	&	.03	&	0.09	&	0.26	&	-	\\
-&	4	&	.07	&	0.48	&	115.27	&	-	\\
-&	5	&	.23	&	11.45	&	-	&	-	\\
-&	6	&	01.06	&	1169.05	&	-	&	-	\\
-&	7	&	12.62	&	-	&	-	&	-	\\
-&	8	&	295.94	&	-	&	-	&	-	\\
-  \midrule
-  RBT
-&	3	&	0.04	&	0.04	&	39.11	&	-	\\
-&	4	&	0.11	&	0.09	&	-	&	-	\\
-&	5	&	0.22	&	0.14	&	-	&	-	\\
-&	6	&	0.40	&	0.35	&	-	&	-	\\
-&	7	&	0.70	&	0.52	&	-	&	-	\\
-&	8	&	1.43	&	1.13	&	-	&	-	\\
-&	9	&	4.11	&	3.42	&	-	&	-	\\
-&	10	&	13.92	&	11.34	&	-	&	-	\\
-&	11	&	31.02	&	51.05	&	-	&	-	\\
-&	12	&	81.03	&	2379.44	&	-	&	-	\\
-&	13	&	697.06	&	-	&	-	&	-	\\
-  \midrule
-  FibHeap
-&	3	&	0.04	&	0.09	&	0.94	&	-	\\
-&	4	&	0.13	&	0.20	&	-	&	-	\\
-&	5	&	0.70	&	1.13	&	-	&	-	\\
-&	6	&	6.51	&	12.80	&	-	&	-	\\
-&	7	&	129.01	&	243.36	&	-	&	-	\\
-  \midrule
-  BinHeap
-&	3	&	0.05	&	0.11	&	2.03	&	18.38	\\
-&	4	&	0.09	&	0.34	&	-	&	-	\\
-&	5	&	0.26	&	0.96	&	-	&	-	\\
-&	6	&	1.31	&	2.96	&	-	&	-	\\
-&	7	&	13.06	&	30.23	&	-	&	-	\\
-&	8	&	96.94	&	220.18	&	-	&	-	\\
-  \bottomrule
-\end{tabular}
-\end{table}
-\vspace{0.3cm}
-\begin{table}[H]
-\scriptsize
+% \begin{table}
+% \scriptsize
+% \centering
+% \label{tab:results-obj1}
+% \begin{tabular}{ l r | r | r | r | r  }
+%   \toprule
+%   \multicolumn{6}{c}{\textbf{ROOPS}} \\
+%   \midrule 
+%   \textbf{Class} & \textbf{Scope} & \textbf{SM/BLD} & \textbf{SM}  & \textbf{BLD} & \textbf{NoOPT}  \\
+%   \midrule
+%   AVL
+% &	3	&	0.02	&	0.04	&	.34	&	-	\\
+% &	4	&	0.03	&	0.07	&	102.16	&	-	\\
+% &	5	&	0.05	&	0.11	&	-	&	-	\\
+% &	6	&	.009	&	0.23	&	-	&	-	\\
+% &	7	&	0.17	&	0.47	&	-	&	-	\\
+% &	8	&	0.32	&	0.64	&	-	&	-	\\
+% &	9	&	0.65	&	2.43	&	-	&	-	\\
+% &	10	&	1.52	&	07.04	&	-	&	-	\\
+% &	11	&	5.11	&	24.58	&	-	&	-	\\
+% &	12	&	19.92	&	55.86	&	-	&	-	\\
+% &	13	&	46.71	&	657.17	&	-	&	-	\\
+%   \midrule
+%   NCL
+% &	3	&	0.04	&	1.31	&	1.37	&	7.96	\\
+% &	4	&	0.10	&	9.59	&	52.17	&	-	\\
+% &	5	&	0.34	&	40.54	&	-	&	-	\\
+% &	6	&	2.27	&	128.51	&	-	&	-	\\
+% &	7	&	33.89	&	659.40	&	-	&	-	\\
+% &	8	&	769.63	&	-	&	-	&	-	\\
+%   \midrule
+%   BinTree
+% &	3	&	0.02	&	0.04	&	0.23	&	105.46	\\
+% &	4	&	0.05	&	0.08	&	85.32	&	-	\\
+% &	5	&	0.11	&	0.16	&	-	&	-	\\
+% &	6	&	0.20	&	0.50	&	-	&	-	\\
+% &	7	&	0.52	&	1.00	&	-	&	-	\\
+% &	8	&	1.70	&	3.77	&	-	&	-	\\
+% &	9	&	7.11	&	16.30	&	-	&	-	\\
+% &	10	&	34.72	&	82.07	&	-	&	-	\\
+% &	11	&	181.11	&	431.63	&	-	&	-	\\
+% &	12	&	966.41	&	2281.42	&	-	&	-	\\
+%   \midrule
+%   LList
+% &	3	&	.03	&	0.09	&	0.26	&	-	\\
+% &	4	&	.07	&	0.48	&	115.27	&	-	\\
+% &	5	&	.23	&	11.45	&	-	&	-	\\
+% &	6	&	01.06	&	1169.05	&	-	&	-	\\
+% &	7	&	12.62	&	-	&	-	&	-	\\
+% &	8	&	295.94	&	-	&	-	&	-	\\
+%   \midrule
+%   RBT
+% &	3	&	0.04	&	0.04	&	39.11	&	-	\\
+% &	4	&	0.11	&	0.09	&	-	&	-	\\
+% &	5	&	0.22	&	0.14	&	-	&	-	\\
+% &	6	&	0.40	&	0.35	&	-	&	-	\\
+% &	7	&	0.70	&	0.52	&	-	&	-	\\
+% &	8	&	1.43	&	1.13	&	-	&	-	\\
+% &	9	&	4.11	&	3.42	&	-	&	-	\\
+% &	10	&	13.92	&	11.34	&	-	&	-	\\
+% &	11	&	31.02	&	51.05	&	-	&	-	\\
+% &	12	&	81.03	&	2379.44	&	-	&	-	\\
+% &	13	&	697.06	&	-	&	-	&	-	\\
+%   \midrule
+%   FibHeap
+% &	3	&	0.04	&	0.09	&	0.94	&	-	\\
+% &	4	&	0.13	&	0.20	&	-	&	-	\\
+% &	5	&	0.70	&	1.13	&	-	&	-	\\
+% &	6	&	6.51	&	12.80	&	-	&	-	\\
+% &	7	&	129.01	&	243.36	&	-	&	-	\\
+%   \midrule
+%   BinHeap
+% &	3	&	0.05	&	0.11	&	2.03	&	18.38	\\
+% &	4	&	0.09	&	0.34	&	-	&	-	\\
+% &	5	&	0.26	&	0.96	&	-	&	-	\\
+% &	6	&	1.31	&	2.96	&	-	&	-	\\
+% &	7	&	13.06	&	30.23	&	-	&	-	\\
+% &	8	&	96.94	&	220.18	&	-	&	-	\\
+%   \bottomrule
+% \end{tabular}
+% \end{table}
+% \vspace{0.3cm}
+% \begin{table}[H]
+% \scriptsize
 
-\centering
-\label{tab:results-obj1}
-\begin{tabular}{ l r | r | r | r | r  }
-  \toprule
-  \multicolumn{6}{c}{\textbf{Korat}} \\
-  \midrule 
-  \textbf{Class} & \textbf{Scope} & \textbf{SM/BLD} & \textbf{SM}  & \textbf{BLD} & \textbf{NoOPT}  \\
-  \midrule
-  DLList
-&	3	&	0.06	&	0.07	&	0.53	&	31.63	\\
-&	4	&	0.25	&	0.36	&	113.34	&	-	\\
-&	5	&	01.01	&	1.30	&	-	&	-	\\
-&	6	&	7.11	&	9.97	&	-	&	-	\\
-&	7	&	108.08	&	153.01	&	-	&	-	\\
-&	8	&	-	&	-	&	-	&	-	\\
-  \midrule
-  FHeap
-&	3	&	0.04	&	0.18	&	0.85	&	-	\\
-&	4	&	0.11	&	0.45	&	-	&	-	\\
-&	5	&	0.56	&	2.55	&	-	&	-	\\
-&	6	&	5.95	&	26.8	&	-	&	-	\\
-&	7	&	115.44	&	-	&	-	&	-	\\
-&	8	&	-	&	-	&	-	&	-	\\
-  \midrule
-  BinHeap
-&	3	&	0.11	&	0.10	&	0.68	&	-	\\
-&	4	&	0.23	&	0.45	&	-	&	-	\\
-&	5	&	0.68	&	5.24	&	-	&	-	\\
-&	6	&	44503	&	176.12	&	-	&	-	\\
-&	7	&	25.32	&	-	&	-	&	-	\\
-&	8	&	163.39	&	-	&	-	&	-	\\
-&	9	&	-	&		&		&		\\
-  \midrule
-  BST
-&	3	&	0.04	&	0.02	&	0.24	&	0.55	\\
-&	4	&	0.09	&	0.02	&	77.21	&	116.03	\\
-&	5	&	0.25	&	0.20	&	-	&	-	\\
-&	6	&	0.44	&	0.38	&	-	&	-	\\
-&	7	&	0.86	&	0.95	&	-	&	-	\\
-&	8	&	03.07	&	2.73	&	-	&	-	\\
-&	9	&	11.77	&	10.70	&	-	&	-	\\
-&	10	&	49.098	&	49.61	&	-	&	-	\\
-&	11	&	199.46	&	171.50	&	-	&	-	\\
-&	12	&	1341.86	&	1351.38	&	-	&	-	\\
-&	13	&	-	&	-	&	-	&	-	\\
-  \midrule
-  SSList
-&	3	&	0.04	&	0.04	&	0.49	&	14.02	\\
-&	4	&	0.13	&	0.21	&	106.38	&	-	\\
-&	5	&	0.42	&	0.65	&	-	&	-	\\
-&	6	&	1.87	&	2.3	&	-	&	-	\\
-&	7	&	17.87	&	25.22	&	-	&	-	\\
-&	8	&	256.49	&	352.16	&	-	&	-	\\
-&	9	&	-	&	-	&	-	&	-	\\
-  \midrule
-  RBT
-&	3	&	0.05	&	.03	&	25.18	&	-	\\
-&	4	&	0.10	&	.06	&	-	&	-	\\
-&	5	&	0.25	&	.11	&	-	&	-	\\
-&	6	&	0.43	&	.21	&	-	&	-	\\
-&	7	&	0.91	&	.40	&	-	&	-	\\
-&	8	&	1.31	&	1.01	&	-	&	-	\\
-&	9	&	4.63	&	2.90	&	-	&	-	\\
-&	10	&	13.88	&	9.19	&	-	&	-	\\
-&	11	&	33.42	&	28.84	&	-	&	-	\\
-&	12	&	79.45	&	94.46	&	-	&	-	\\
-&	13	&	689.06	&	308.06	&	-	&	-	\\
-&	14	&	-	&	-	&	-	&	-	\\
-  \midrule
-  SortedList
-&	3	&	0.01	&	0.01	&	0.24	&	0.94	\\
-&	4	&	0.02	&	0.03	&	74.45	&	-	\\
-&	5	&	0.05	&	0.05	&	-	&	-	\\
-&	6	&	0.11	&	0.13	&	-	&	-	\\
-&	7	&	0.23	&	0.27	&	-	&	-	\\
-&	8	&	0.65	&	0.68	&	-	&	-	\\
-&	9	&	02.07	&	2.24	&	-	&	-	\\
-&	10	&	8.14	&	09.04	&	-	&	-	\\
-  \bottomrule
-\end{tabular}
-\end{table}
+% \centering
+% \label{tab:results-obj1}
+% \begin{tabular}{ l r | r | r | r | r  }
+%   \toprule
+%   \multicolumn{6}{c}{\textbf{Korat}} \\
+%   \midrule 
+%   \textbf{Class} & \textbf{Scope} & \textbf{SM/BLD} & \textbf{SM}  & \textbf{BLD} & \textbf{NoOPT}  \\
+%   \midrule
+%   DLList
+% &	3	&	0.06	&	0.07	&	0.53	&	31.63	\\
+% &	4	&	0.25	&	0.36	&	113.34	&	-	\\
+% &	5	&	01.01	&	1.30	&	-	&	-	\\
+% &	6	&	7.11	&	9.97	&	-	&	-	\\
+% &	7	&	108.08	&	153.01	&	-	&	-	\\
+% &	8	&	-	&	-	&	-	&	-	\\
+%   \midrule
+%   FHeap
+% &	3	&	0.04	&	0.18	&	0.85	&	-	\\
+% &	4	&	0.11	&	0.45	&	-	&	-	\\
+% &	5	&	0.56	&	2.55	&	-	&	-	\\
+% &	6	&	5.95	&	26.8	&	-	&	-	\\
+% &	7	&	115.44	&	-	&	-	&	-	\\
+% &	8	&	-	&	-	&	-	&	-	\\
+%   \midrule
+%   BinHeap
+% &	3	&	0.11	&	0.10	&	0.68	&	-	\\
+% &	4	&	0.23	&	0.45	&	-	&	-	\\
+% &	5	&	0.68	&	5.24	&	-	&	-	\\
+% &	6	&	44503	&	176.12	&	-	&	-	\\
+% &	7	&	25.32	&	-	&	-	&	-	\\
+% &	8	&	163.39	&	-	&	-	&	-	\\
+% &	9	&	-	&		&		&		\\
+%   \midrule
+%   BST
+% &	3	&	0.04	&	0.02	&	0.24	&	0.55	\\
+% &	4	&	0.09	&	0.02	&	77.21	&	116.03	\\
+% &	5	&	0.25	&	0.20	&	-	&	-	\\
+% &	6	&	0.44	&	0.38	&	-	&	-	\\
+% &	7	&	0.86	&	0.95	&	-	&	-	\\
+% &	8	&	03.07	&	2.73	&	-	&	-	\\
+% &	9	&	11.77	&	10.70	&	-	&	-	\\
+% &	10	&	49.098	&	49.61	&	-	&	-	\\
+% &	11	&	199.46	&	171.50	&	-	&	-	\\
+% &	12	&	1341.86	&	1351.38	&	-	&	-	\\
+% &	13	&	-	&	-	&	-	&	-	\\
+%   \midrule
+%   SSList
+% &	3	&	0.04	&	0.04	&	0.49	&	14.02	\\
+% &	4	&	0.13	&	0.21	&	106.38	&	-	\\
+% &	5	&	0.42	&	0.65	&	-	&	-	\\
+% &	6	&	1.87	&	2.3	&	-	&	-	\\
+% &	7	&	17.87	&	25.22	&	-	&	-	\\
+% &	8	&	256.49	&	352.16	&	-	&	-	\\
+% &	9	&	-	&	-	&	-	&	-	\\
+%   \midrule
+%   RBT
+% &	3	&	0.05	&	.03	&	25.18	&	-	\\
+% &	4	&	0.10	&	.06	&	-	&	-	\\
+% &	5	&	0.25	&	.11	&	-	&	-	\\
+% &	6	&	0.43	&	.21	&	-	&	-	\\
+% &	7	&	0.91	&	.40	&	-	&	-	\\
+% &	8	&	1.31	&	1.01	&	-	&	-	\\
+% &	9	&	4.63	&	2.90	&	-	&	-	\\
+% &	10	&	13.88	&	9.19	&	-	&	-	\\
+% &	11	&	33.42	&	28.84	&	-	&	-	\\
+% &	12	&	79.45	&	94.46	&	-	&	-	\\
+% &	13	&	689.06	&	308.06	&	-	&	-	\\
+% &	14	&	-	&	-	&	-	&	-	\\
+%   \midrule
+%   SortedList
+% &	3	&	0.01	&	0.01	&	0.24	&	0.94	\\
+% &	4	&	0.02	&	0.03	&	74.45	&	-	\\
+% &	5	&	0.05	&	0.05	&	-	&	-	\\
+% &	6	&	0.11	&	0.13	&	-	&	-	\\
+% &	7	&	0.23	&	0.27	&	-	&	-	\\
+% &	8	&	0.65	&	0.68	&	-	&	-	\\
+% &	9	&	02.07	&	2.24	&	-	&	-	\\
+% &	10	&	8.14	&	09.04	&	-	&	-	\\
+%   \bottomrule
+% \end{tabular}
+% \end{table}
 
 
-\begin{table}[H]
-\scriptsize
-\centering
-\label{tab:results-obj1}
-\begin{tabular}{ l r | r | r | r | r  }
-  \toprule
-  \multicolumn{6}{c}{\textbf{Kiasan}} \\
-  \midrule 
-  \textbf{Class} & \textbf{Scope} & \textbf{SM/BLD} & \textbf{SM}  & \textbf{BLD} & \textbf{NoOPT}  \\
-  \midrule
-  BinTree
-&	3	&	0.03	&	0.04	&	0.52	&	-	\\
-&	4	&	0.08	&	0.10	&	116.71	&	-	\\
-&	5	&	0.18	&	0.17	&	-	&	-	\\
-&	6	&	0.48	&	0.40	&	-	&	-	\\
-&	7	&	01.02	&	1.20	&	-	&	-	\\
-&	8	&	2.80	&	4.80	&	-	&	-	\\
-&	9	&	11.66	&	22.33	&	-	&	-	\\
-&	10	&	50.82	&	112.73	&	-	&	-	\\
-&	11	&	204.83	&	583.60	&	-	&	-	\\
-&	12	&	1235.67	&	-	&	-	&	-	\\
-  \midrule
-  DLList
-&	3	&	0.02	&	0.37	&	0.22	&	-	\\
-&	4	&	0.11	&	1.59	&	72.60	&	-	\\
-&	5	&	0.47	&	67.72	&	-	&	-	\\
-&	6	&	1.68	&	-	&	-	&	-	\\
-&	7	&	18.09	&	-	&	-	&	-	\\
-&	8	&	257.42	&	-	&	-	&	-	\\
-  \midrule
-  DisjSet
-&	3	&	0.02	&	0.02	&	0.05	&	1.44	\\
-&	4	&	0.06	&	0.07	&	0.24	&	-	\\
-&	5	&	0.30	&	0.29	&	2.69	&	-	\\
-&	6	&	1.94	&	2.22	&	-	&	-	\\
-&	7	&	28.94	&	31.67	&	-	&	-	\\
-  \midrule
-  RBT
-&	3	&	0.05	&	0.04	&	25.34	&	-	\\
-&	4	&	0.11	&	0.06	&	-	&	-	\\
-&	5	&	0.25	&	0.14	&	-	&	-	\\
-&	6	&	0.41	&	0.24	&	-	&	-	\\
-&	7	&	0.78	&	0.43	&	-	&	-	\\
-&	8	&	1.57	&	1.00	&	-	&	-	\\
-&	9	&	4.12	&	2.80	&	-	&	-	\\
-&	10	&	11.39	&	8.93	&	-	&	-	\\
-&	11	&	34.88	&	29.22	&	-	&	-	\\
-&	12	&	84.51	&	95.11	&	-	&	-	\\
-  \midrule
-  DisjSet
-&	3	&	0.02	&	0.02	&	1.49	&	1.45	\\
-&	4	&	0.06	&	0.07	&	-	&	-	\\
-&	5	&	0.21	&	0.22	&	-	&	-	\\
-&	6	&	0.89	&	0.99	&	-	&	-	\\
-&	7	&	8.26	&	7.92	&	-	&	-	\\
-  \midrule
-  StackLi
-&	3	&	0.03	&	0.06	&	0.24	&	-	\\
-&	4	&	0.10	&	0.18	&	90.27	&	-	\\
-&	5	&	0.55	&	0.84	&	-	&	-	\\
-&	6	&	4.35	&	8.47	&	-	&	-	\\
-&	7	&	83.06	&	158.26	&	-	&	-	\\
-  \midrule
-  BHeap
-&	3	&	0.04	&	0.06	&	0.8	&	-	\\
-&	4	&	0.13	&	0.15	&	-	&	-	\\
-&	5	&	0.45	&	0.69	&	-	&	-	\\
-&	6	&	3.14	&	44.413	&	-	&	-	\\
-&	7	&	53.78	&	79.12	&	-	&	-	\\
-&	8	&	1221.59	&	1756.71	&	-	&	-	\\
-\midrule
-  TreeMap
-&	3	&	0.14	&	0.50	&	-	&	-	\\
-&	4	&	2.15	&	2.59	&	-	&	-	\\
-&	5	&	24.95	&	45.46	&	-	&	-	\\
-&	6	&	866.71	&	-	&	-	&	-	\\
-  \bottomrule
-\end{tabular}
-\end{table}
+% \begin{table}[H]
+% \scriptsize
+% \centering
+% \label{tab:results-obj1}
+% \begin{tabular}{ l r | r | r | r | r  }
+%   \toprule
+%   \multicolumn{6}{c}{\textbf{Kiasan}} \\
+%   \midrule 
+%   \textbf{Class} & \textbf{Scope} & \textbf{SM/BLD} & \textbf{SM}  & \textbf{BLD} & \textbf{NoOPT}  \\
+%   \midrule
+%   BinTree
+% &	3	&	0.03	&	0.04	&	0.52	&	-	\\
+% &	4	&	0.08	&	0.10	&	116.71	&	-	\\
+% &	5	&	0.18	&	0.17	&	-	&	-	\\
+% &	6	&	0.48	&	0.40	&	-	&	-	\\
+% &	7	&	01.02	&	1.20	&	-	&	-	\\
+% &	8	&	2.80	&	4.80	&	-	&	-	\\
+% &	9	&	11.66	&	22.33	&	-	&	-	\\
+% &	10	&	50.82	&	112.73	&	-	&	-	\\
+% &	11	&	204.83	&	583.60	&	-	&	-	\\
+% &	12	&	1235.67	&	-	&	-	&	-	\\
+%   \midrule
+%   DLList
+% &	3	&	0.02	&	0.37	&	0.22	&	-	\\
+% &	4	&	0.11	&	1.59	&	72.60	&	-	\\
+% &	5	&	0.47	&	67.72	&	-	&	-	\\
+% &	6	&	1.68	&	-	&	-	&	-	\\
+% &	7	&	18.09	&	-	&	-	&	-	\\
+% &	8	&	257.42	&	-	&	-	&	-	\\
+%   \midrule
+%   DisjSet
+% &	3	&	0.02	&	0.02	&	0.05	&	1.44	\\
+% &	4	&	0.06	&	0.07	&	0.24	&	-	\\
+% &	5	&	0.30	&	0.29	&	2.69	&	-	\\
+% &	6	&	1.94	&	2.22	&	-	&	-	\\
+% &	7	&	28.94	&	31.67	&	-	&	-	\\
+%   \midrule
+%   RBT
+% &	3	&	0.05	&	0.04	&	25.34	&	-	\\
+% &	4	&	0.11	&	0.06	&	-	&	-	\\
+% &	5	&	0.25	&	0.14	&	-	&	-	\\
+% &	6	&	0.41	&	0.24	&	-	&	-	\\
+% &	7	&	0.78	&	0.43	&	-	&	-	\\
+% &	8	&	1.57	&	1.00	&	-	&	-	\\
+% &	9	&	4.12	&	2.80	&	-	&	-	\\
+% &	10	&	11.39	&	8.93	&	-	&	-	\\
+% &	11	&	34.88	&	29.22	&	-	&	-	\\
+% &	12	&	84.51	&	95.11	&	-	&	-	\\
+%   \midrule
+%   DisjSet
+% &	3	&	0.02	&	0.02	&	1.49	&	1.45	\\
+% &	4	&	0.06	&	0.07	&	-	&	-	\\
+% &	5	&	0.21	&	0.22	&	-	&	-	\\
+% &	6	&	0.89	&	0.99	&	-	&	-	\\
+% &	7	&	8.26	&	7.92	&	-	&	-	\\
+%   \midrule
+%   StackLi
+% &	3	&	0.03	&	0.06	&	0.24	&	-	\\
+% &	4	&	0.10	&	0.18	&	90.27	&	-	\\
+% &	5	&	0.55	&	0.84	&	-	&	-	\\
+% &	6	&	4.35	&	8.47	&	-	&	-	\\
+% &	7	&	83.06	&	158.26	&	-	&	-	\\
+%   \midrule
+%   BHeap
+% &	3	&	0.04	&	0.06	&	0.8	&	-	\\
+% &	4	&	0.13	&	0.15	&	-	&	-	\\
+% &	5	&	0.45	&	0.69	&	-	&	-	\\
+% &	6	&	3.14	&	44.413	&	-	&	-	\\
+% &	7	&	53.78	&	79.12	&	-	&	-	\\
+% &	8	&	1221.59	&	1756.71	&	-	&	-	\\
+% \midrule
+%   TreeMap
+% &	3	&	0.14	&	0.50	&	-	&	-	\\
+% &	4	&	2.15	&	2.59	&	-	&	-	\\
+% &	5	&	24.95	&	45.46	&	-	&	-	\\
+% &	6	&	866.71	&	-	&	-	&	-	\\
+%   \bottomrule
+% \end{tabular}
+% \end{table}
 
